<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple CI !</string>
    <string name="hello_world">Choose action</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage_service">Manage service</string>
    <string name="action_quit">Quit</string>
    <string name="start_service">Start fetch build info</string>
    <string name="stop_service">Stop fetch build info</string>
    <string name="to_listscreen">Back to build info list</string>
    <string name="service_status_default">No service info</string>
    <string name="btn_load_more">Load more </string>
    <string name="build_info_list_title">Build info</string>
    <string name="build_info_status_success">Successful</string>
    <string name="build_info_status_failed">Failed</string>
    <string name="build_info_status_cancelled">Cancelled</string>
    <string name="build_info_build_id_title">Build id: </string>
    <string name="build_info_build_status_title">Build status: </string>
    <string name="build_info_build_start_time_title">Build start time: </string>
    <string name="build_info_build_end_time_title">Build end time: </string>
    <string name="build_info_build_log_url_title">Log url: </string>

</resources>