<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.techburg.projectxclient.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tv_helloworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_startservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_helloworld"
        android:layout_below="@+id/tv_helloworld"
        android:layout_marginTop="20dp"
        android:onClick="onBtnStartService"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btn_stopservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_startservice"
        android:layout_below="@+id/btn_startservice"
        android:layout_marginTop="20dp"
        android:onClick="onBtnStopService"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/btn_to_listscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_stopservice"
        android:layout_below="@+id/btn_stopservice"
        android:layout_marginTop="20dp"
        android:onClick="onBtnToListScreen"
        android:text="@string/to_listscreen" />
    
    <TextView
        android:id="@+id/tv_service_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_to_listscreen"
        android:layout_marginTop="20dp"
        android:text="@string/service_status_default" />

</RelativeLayout>